WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191708
WKPreferencesSetFontSmoothingLevel doesn't actually do anything
https://bugs.webkit.org/show_bug.cgi?id=191708
Summary
WKPreferencesSetFontSmoothingLevel doesn't actually do anything
Myles C. Maxfield
Reported
2018-11-15 13:42:45 PST
WKPreferencesSetFontSmoothingLevel doesn't actually do anything
Attachments
Patch
(15.07 KB, patch)
2018-11-15 13:44 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2018-11-15 13:44:26 PST
Created
attachment 354981
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-11-15 14:17:39 PST
Comment on
attachment 354981
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354981&action=review
> Source/WebKit/ChangeLog:8 > + Delete the symbol because no one calls it and it doesn't do anything
It's called by TestController::resetPreferencesToConsistentValues() and turns off subpixel antialiasing on platforms that still support that.
Myles C. Maxfield
Comment 3
2018-11-15 17:02:58 PST
Comment on
attachment 354981
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354981&action=review
>> Source/WebKit/ChangeLog:8 >> + Delete the symbol because no one calls it and it doesn't do anything > > It's called by TestController::resetPreferencesToConsistentValues() and turns off subpixel antialiasing on platforms that still support that.
It is called, but this call doesn't do anything. Smoothing is controlled by another mechanism instead.
Myles C. Maxfield
Comment 4
2018-11-15 17:24:21 PST
Comment on
attachment 354981
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=354981&action=review
>>> Source/WebKit/ChangeLog:8 >>> + Delete the symbol because no one calls it and it doesn't do anything >> >> It's called by TestController::resetPreferencesToConsistentValues() and turns off subpixel antialiasing on platforms that still support that. > > It is called, but this call doesn't do anything. Smoothing is controlled by another mechanism instead.
It's controlled by WKContextSetShouldUseFontSmoothing()
WebKit Commit Bot
Comment 5
2018-11-15 17:55:11 PST
Comment on
attachment 354981
[details]
Patch Clearing flags on attachment: 354981 Committed
r238264
: <
https://trac.webkit.org/changeset/238264
>
WebKit Commit Bot
Comment 6
2018-11-15 17:55:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-15 17:56:26 PST
<
rdar://problem/46114818
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug