WKPreferencesSetFontSmoothingLevel doesn't actually do anything https://bugs.webkit.org/show_bug.cgi?id=191708

Reviewed by Simon Fraser.

Delete the symbol because no one calls it and it doesn't do anything

Source/WebKit:

* Scripts/PreferencesTemplates/WebPreferencesStoreDefaultsMap.cpp.erb:
* Shared/FontSmoothingLevel.h: Removed.
* Shared/WebPreferences.yaml:
* UIProcess/API/C/WKAPICast.h:
(WebKit::toFontSmoothingLevel): Deleted.
* UIProcess/API/C/WKPreferences.cpp:
(WKPreferencesSetFontSmoothingLevel): Deleted.
(WKPreferencesGetFontSmoothingLevel): Deleted.
* UIProcess/API/C/WKPreferencesRefPrivate.h:
* UIProcess/WebPreferences.h:
* WebKit.xcodeproj/project.pbxproj:
* mac/WebKit2.order:

Tools:

* TestWebKitAPI/Tests/WebKit/WKPreferences.cpp:
(TestWebKitAPI::TEST):
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetPreferencesToConsistentValues):


Canonical link: https://commits.webkit.org/206461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238264 268f45cc-cd09-0410-ab3c-d52691b4dbfc