Source/WebKit/UIProcess/WebPreferences.h
@@ -28,7 +28,6 @@
 #include "APIExperimentalFeature.h"
 #include "APIInternalDebugFeature.h"
 #include "APIObject.h"
-#include "FontSmoothingLevel.h"
 #include "WebPreferencesDefinitions.h"
 #include "WebPreferencesStore.h"
 #include <wtf/HashSet.h>
